[package]
name = "banip"
version = "0.1.0"
edition = "2021"
description = "Ban all non-China IP addresses using ipset"
authors = ["pan2z"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
ipnet = "2"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
